[package]
name = "wolfgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.2.0"
clap = "4.2.7"
colored = "2.0.0"

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "linker-plugin-lto", "-C", "link-arg=-s"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker-plugin-lto", "-C", "link-arg=-s"]